--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Food Delivery Project/css/style.css" />
-    <link rel="stylesheet" href="/Food Delivery Project/css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
   <header class="header container">
     <a href="/" class="logo">
-      <img width="128px" src="img/logo.png" alt="Лого: Индекс Еда" class="logo-image" />
+      <img width="128px" src="img/logo.png" alt="Лого: Индекс Еда" class="logo-image">
     </a>
     <form action="#" class="search-form">
-      <input class="search-input" type="search" placeholder="Блюда" />
+      <input class="search-input" type="search" placeholder="Блюда">
       <button class="search-button">
-          <img src="img/search-icon.svg" alt="search-icon" class="search-icon" />
+          <img src="img/search-icon.svg" alt="search-icon" class="search-icon">
       </button>
     </form>
     <div class="auth">
