--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- /.slider -->
     <div class="promo">
       <section class="card card-text-light sweet-basket">
-        <img src="img/sweet-basket.png" alt="сладкая корзина" class="card-image">
+        <img src="img/sweet-basket.jpg" alt="сладкая корзина" class="card-image">
         <div class="card-header">
           <h3 class="card-title">Сладкая корзина</h3>
           <p class="card-description">Произвольный выбор
@@ -76,7 +76,7 @@
       <!-- 2nd card -->
 
       <section class="card card-text-light sweet-basket">
-        <img src="img/min-effort.png" alt="минимум усилий" class="card-image">
+        <img src="img/min-effort.jpg" alt="минимум усилий" class="card-image">
         <div class="card-header">
           <h3 class="card-title">Минимум усилий</h3>
           <p class="card-description">Произвольный выбор
